# multi-wallet-sdk

./: Anchor.toml  README.md  package-lock.json  package.json
programs/multi_wallet/: Cargo.toml
programs/multi_wallet/src/: error.rs  lib.rs
programs/multi_wallet/src/contexts/: cancel_escrow_as_non_owner.rs  cancel_escrow_as_owner.rs  change_config.rs  create_multi_wallet.rs  execute_escrow_as_non_owner.rs  execute_escrow_as_owner.rs  initialize_escrow_as_non_owner.rs  initialize_escrow_as_owner.rs  mod.rs  transaction_buffer_close.rs  transaction_buffer_create.rs  transaction_buffer_extend.rs  vault_transaction_execute.rs
programs/multi_wallet/src/state/: escrow.rs  events.rs  mod.rs  multi_wallet.rs  seeds.rs  transaction_buffer.rs  vault_transaction.rs
programs/multi_wallet/src/utils/: executable_transaction_message.rs  mod.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/idl/: multi_wallet.ts
sdk/src/instructions/: acceptEscrowAsNonOwner.ts  acceptEscrowAsOwner.ts  addJitoTip.ts  cancelEscrowAsNonOwner.ts  cancelEscrowAsOwner.ts  changeConfig.ts  createTransactionBuffer.ts  createVaultExecute.ts  createWallet.ts  index.ts  initiateEscrowAsNonOwner.ts  initiateEscrowAsOwner.ts
sdk/src/methods/: createTransactionBundle.ts  fetchEscrowData.ts  fetchMultiWalletData.ts  fetchTransactionBufferData.ts  index.ts
sdk/src/types/: config.ts  index.ts  multi_wallet.ts  permissions.ts
sdk/src/utils/: compileToWrappedMessageV0.ts  (+4 more)
tests/: multi-wallet.ts
utils/: index.ts
utils/types/: permissions.ts  transactionMessage.ts
